# SHL_assessment_selector

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  approach.md  build_index.py  catalog.index  catalog.json  catalog_data.json  catalog_meta.json  main.py  prompts.py  pyproject.toml  requirements.txt  retriever.py  scrape_catalog.py  test_agent.py
