[project]
name = "shl-assessment-selector"
version = "1.0.0"
description = "Conversational agent for finding the right SHL assessments"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]
